// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FormConceptPure correctly 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Component)
      term="Dataset_content"
      title="Begrep"
    />
    <Field
      component={[Function]}
      getTagFromItem={[Function]}
      name="concepts"
      renderLookupInput={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <withStateHandlers(Component)
      term="Dataset_keyword"
      title="Søkeord"
    />
    <MultilingualField
      component={[Function]}
      label="Søkeord"
      languages={Array []}
      name="keyword"
      showLabel={false}
    />
  </div>
</form>
`;

exports[`should render FormConceptPure correctly with errors 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Component)
      term="Dataset_content"
      title="Begrep"
    />
    <Field
      component={[Function]}
      getTagFromItem={[Function]}
      name="concepts"
      renderLookupInput={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <withStateHandlers(Component)
      term="Dataset_keyword"
      title="Søkeord"
    />
    <MultilingualField
      component={[Function]}
      label="Søkeord"
      languages={Array []}
      name="keyword"
      showLabel={false}
    />
    <div
      className="alert alert-danger mt-3"
    >
      Feil
    </div>
  </div>
</form>
`;
